--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "pg": "^8.13.1",
+    "postgres": "^3.4.5",
+    "sequelize": "^6.37.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
