--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "mysql2": "^3.11.4",
     "pg": "^8.13.1",
     "postgres": "^3.4.5",
     "sequelize": "^6.37.5"
